--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "logmt-patcher",
   "version": "0.0.1",
   "description": " GitHub Action for patching logfmt logs in issues",
+  "repository": "https://github.com/containrrr/logmt-patcher",
   "main": "index.ts",
   "scripts": {
     "build": "ncc build index.ts --license licenses.txt",
@@ -13,7 +14,8 @@
     "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
     "@octokit/core": "^3.4.0",
-    "logfmt": "^1.3.2"
+    "logfmt": "^1.3.2",
+    "string.prototype.matchall": "^4.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
